# nemesis

./: .clang-format  .cvsignore  .gitignore  .travis.yml  CREDITS  ChangeLog  ChangeLog.md  INSTALL  LICENSE  Makefile.am  Makefile.am.common  Makefile.in  README  README.md  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  makefile.win  mkinstalldirs
.github/workflows/: ci.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  dirs  nemesis.lintian-overrides  rules  watch
debian/patches/: 00list  01_manpage-nemesis-ethernet.dpatch  02_manpage-nemesis-rip.dpatch  03_arp-manpage.dpatch  04_dns-manpagefix.dpatch  05_ethernet-manpagefix.dpatch  06_icmp-manpagefix.dpatch  07_igmp-manpagefix.dpatch  08_ip-manpagefix.dpatch  09_ospf-manpagefix.dpatch  10_tcp-manpagefix.dpatch  11_udp-manpagefix.dpatch
docs/: CONTRIBUTING.md  CREDITS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
lib/: getopt.c  inet_aton.c  memcmp.c  strlcat.c  strlcpy.c  strsep.c
man/: Makefile.am  Makefile.in  nemesis-arp.1  nemesis-dhcp.1  nemesis-dns.1  nemesis-ethernet.1  nemesis-icmp.1  nemesis-igmp.1  nemesis-ip.1  nemesis-ospf.1  nemesis-rip.1  nemesis-tcp.1  nemesis-udp.1  nemesis.1
src/: .gitignore  Makefile.am  Makefile.in  W32_fzs.c  getopt.c  inet_aton.c  memcmp.c  nemesis-arp.c  nemesis-arp.h  nemesis-dhcp.c  nemesis-dhcp.h  nemesis-dns.c  nemesis-dns.h  nemesis-ethernet.c  nemesis-ethernet.h  nemesis-fileio.c  nemesis-functions.c  nemesis-icmp.c  nemesis-icmp.h  nemesis-igmp.c  nemesis-igmp.h  nemesis-ip.c  nemesis-ip.h  nemesis-ospf.c  nemesis-ospf.h  nemesis-printout.c  nemesis-proto_arp.c  nemesis-proto_dhcp.c  nemesis-proto_dns.c  nemesis-proto_ethernet.c  nemesis-proto_icmp.c  nemesis-proto_igmp.c  nemesis-proto_ip.c  nemesis-proto_ospf.c  nemesis-proto_rip.c  nemesis-proto_tcp.c  nemesis-proto_udp.c  nemesis-rip.c  nemesis-rip.h  nemesis-tcp.c  (+8 more)
