## $Id: Makefile.am,v 1.1.1.1 2003/10/31 21:29:35 jnathan Exp $

include $(top_srcdir)/Makefile.am.common

man_MANS = nemesis-arp.1 \
nemesis-dns.1 \
nemesis-ethernet.1 \
nemesis-icmp.1 \
nemesis-igmp.1 \
nemesis-ip.1 \
nemesis-ospf.1 \
nemesis-rip.1 \
nemesis-tcp.1 \
nemesis-udp.1 \
nemesis.1

EXTRA_DIST = $(man_MANS)

INCLUDES = @INCLUDES@
