AUTOMAKE_OPTIONS = foreign no-dependencies
DISTCLEANFILES = *~

man_MANS = nemesis-arp.1			\
	   nemesis-dhcp.1			\
	   nemesis-dns.1			\
	   nemesis-ethernet.1			\
	   nemesis-icmp.1			\
	   nemesis-igmp.1			\
	   nemesis-ip.1				\
	   nemesis-ospf.1			\
	   nemesis-rip.1			\
	   nemesis-tcp.1			\
	   nemesis-udp.1			\
	   nemesis.1

EXTRA_DIST = $(man_MANS)
